--- a/aboly.html
+++ b/aboly.html
@@ -968,6 +968,10 @@ img.characterimg {
 <div class="lybloboriginaltext"><p><a href="#ziyou">子游</a>问孝，子曰：“今之孝者，是谓能养。至于犬马，皆能有养；不敬，何以别乎？”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">养</span>：供养，养老。<span class="lyterm">犬马</span>是<span class="lyterm">有养</span>的宾语（而非主语）。</p></li>
+<li>
+<p><a id="heyi"></a><span class="lyterm">何以</span>：“以何”的倒装，用什么，靠什么，怎样，how。<span class="lyterm">以</span>表示动作的凭借。<span class="lyexample"><span>【例】</span><span>曹操《短歌行》：<span class="lyq">何以解忧？唯有杜康。</span><a href="#5.15" class="lyref">5.15</a> <span class="lyq">孔文子何以谓之“文”也？</span></span></span></p>
+<p>这里“何以”用在反问句中表示否定，这个用法很常见。<span class="lyexample"><span>【例】</span><span><a href="#2.22" class="lyref">2.22</a> <span class="lyq">其何以行之哉？</span><a href="#3.26" class="lyref">3.26</a> <span class="lyq">吾何以观之哉？</span><a href="#14.34" class="lyref">14.34</a> <span class="lyq">何以报德？</span></span></span></p>
+</li>
 <li><p><span class="lyterm">别</span>：区分，区别。所以“孝敬”后来就合为了一个常用词。用现代的话说，宠物是宠物，就算再“通人性”，也远不能与敬养父母相提并论。<span class="lyseealso"><span>【参】</span><span>《孝经·圣治》：<span class="lyq">亲生之膝下，以养父母日严。圣人因严以教敬，因亲以教爱。</span>（亲生之膝下：指子女对父母的爱，萌生于年幼依依膝下之时。严：恭谨。）孔子对宠物有爱心而不逾礼。《礼记·檀弓下》：<span class="lyq">仲尼之畜狗死，使子贡埋之，曰：“吾闻之也：<a href="#bi4b">敝</a>帷不弃，为埋马也；敝<a href="#qinggai">盖</a>不弃，为埋狗也。丘也贫，无盖，于其封也，亦予之席，毋使其首陷焉。”</span>（<a id="wei2a"></a>帷（<span class="lypinyin">wéi</span>）：围在四周的帐子。封（<span class="lypinyin">biǎn</span>）：通“窆”（<span class="lypinyin">biǎn</span>），下葬。予（<span class="lypinyin">yǔ</span>）：给。陷：指直接埋在土里。）</span></span></p></li>
 </ul></div>
 </div>
@@ -1530,7 +1534,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“居上不宽，为礼不敬，临丧不哀，吾何以观之哉？”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">宽</span>：本义为房屋宽敞，引申指人度量大，宽厚。</p></li>
-<li><p><span class="lyterm">吾何以观之哉？</span>：这种人对我来说有什么值得一看的呢？意即乏善可陈。<span class="lyterm">观</span>：本义为注视，这里带有堪称一景、值得一瞧的意思，可以比较现代汉语的“可观”。<span class="lyexample"><span>【例】</span><span><a href="#8.11" class="lyref">8.11</a> <span class="lyq">其余不足观也已。</span><a href="#19.4" class="lyref">19.4</a> <span class="lyq">虽小道，必有可观者焉。</span></span></span></p></li>
+<li><p><span class="lyterm">吾<a href="#heyi">何以</a>观之哉？</span>：这种人对我来说有什么值得一看的呢？意即乏善可陈。<span class="lyterm">观</span>：本义为注视，这里有堪称一景、值得一瞧的意味，可以比较现代汉语的“可观”。<span class="lyexample"><span>【例】</span><span><a href="#8.11" class="lyref">8.11</a> <span class="lyq">其余不足观也已。</span><a href="#19.4" class="lyref">19.4</a> <span class="lyq">虽小道，必有可观者焉。</span></span></span></p></li>
 </ul></div>
 </div>
 <a id="4"></a><h1 class="lybodychapter">4. 里仁</h1>
@@ -2359,7 +2363,7 @@ img.characterimg {
 <p><a id="nanzi"></a><span class="lyterm">南子</span>：<a href="#songguo">宋国</a>宗室之女，子姓，<a href="#weilinggong">卫灵公</a>的续弦夫人，美艳而有<a href="#songzhao">淫乱</a>之名。前496年，卫太子<a href="#weijun">蒯聩</a>因受宋人<a href="#songzhao">耻笑</a>，欲杀南子，触怒了灵公，蒯聩出奔。3年后灵公去世，蒯聩之子蒯辄继任为<a href="#weijun">卫出公</a>。又12年后，蒯聩夺位为卫庄公，遂杀南子。</p>
 <a id="zijiannanzi"></a><div class="lyseealso">
 <p><span>【参】</span><span>根据孔子周游列国的行程推算，子见南子约在前496年。《左传》未载此事，现仅见于《史记·孔子世家》：<span class="lyq">反乎卫，主<a href="#quboyu">蘧伯玉</a>家。灵公夫人有南子者，使人谓孔子曰：“四方之君子不辱欲与寡君为兄弟者，必见<a href="#16.14">寡小君</a>。寡小君愿见。”孔子辞谢，不得已而见之。夫人在<a href="#chi1">絺</a><a href="#wei2a">帷</a>中，孔子入门，<a href="#nanmian">北面</a><a href="#baili">稽首</a>。夫人自帷中<a href="#zaibai">再拜</a>，环佩玉声璆然。孔子曰：“吾<a href="#xiang4a">乡</a>为弗见，见之，礼答焉。”子路不说。孔子<a href="#shi3a">矢</a>之曰：“予所否者，天厌之！天厌之！”居卫月余，灵公与夫人同车，宦者雍渠参乘，出，使孔子为次乘，招摇市过之。孔子曰：“吾未见好德如好色者也。”于是丑之，去卫，过曹。</span>（主：住。璆（<span class="lypinyin">qiú</span>）：玉饰相互撞动的叮咚声。<a id="cansheng"></a>同乘一车者，尊长居左，<a href="#yu4b">御</a>者居中，参<a href="#sheng4a">乘</a>就是车右陪乘人员。）</span></p>
-<p>据《汉书·王莽传》所载太皇太后诏书：<span class="lyq">孔子见南子，<a href="#zhougong">周公</a>居<a href="#she4a">摄</a>，盖<a href="#quan2">权</a>时也。</span>颜师古注：<span class="lyq">孔子欲说灵公以治道，故见南子也。</span>可以视为当时的主流观点。</p>
+<p>据《汉书·王莽传》所载太皇太后诏书：<span class="lyq">孔子见南子，<a href="#zhougong">周公</a>居<a href="#she4a">摄</a>，盖<a href="#quan2">权</a>时也。</span>颜师古注：<span class="lyq">孔子欲说灵公以治道，故见南子也。</span>可以看作当时的主流观点。</p>
 </div>
 </li>
 <li><p><a id="shi3a"></a><span class="lyterm">矢</span>（<span class="lypinyin">shǐ</span>）：赌咒发誓。<span class="lyexample"><span>【例】</span><span>成语“矢口否认”意思是一口咬定绝不承认。</span></span></p></li>
@@ -2633,7 +2637,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><a id="shanren"></a><span class="lyterm">善人</span>：品性好、常行善的人。这是<a href="#sheng4">圣人</a>、<a href="#junzi">君子</a>之后再退一步说。</p></li>
 <li><p><span class="lyterm">有恒者</span>：指思想坚定而不从俗作恶的人。<a id="heng2"></a><span class="lyterm">恒</span>：长久，持久不变。其甲骨文本字为亙（<span class="lypinyin">gèng</span>），是用天地之间的月亮来代表永恒不变的真心，金文又加忄旁为恆。<span class="lyexample"><span>【例】</span><span>《孟子·梁惠王上》：<span class="lyq">无恒产而有恒心者，惟<a href="#shi4c">士</a>为能。</span></span></span></p></li>
-<li><p><a id="wei2"></a><span class="lyterm">为</span>（<span class="lypinyin">wéi</span>）：装成，做出样子，act。<span class="lyexample"><span>【例】</span><span><a href="#9.12" class="lyref">9.12</a> <span class="lyq">无臣而为有臣，吾谁欺？</span><a href="#19.25" class="lyref">19.25</a> <span class="lyq">子为恭也。</span></span></span><span class="lyseealso"><span>【参】</span><span>“亡而为有”等的反面，可对比 <a href="#8.5" class="lyref">8.5</a> 。</span></span></p></li>
+<li><p><a id="wei2"></a><span class="lyterm">为</span>（<span class="lypinyin">wéi</span>）：装成，做出样子，act。<span class="lyexample"><span>【例】</span><span><a href="#9.12" class="lyref">9.12</a> <span class="lyq">无臣而为有臣，吾谁欺？</span><a href="#19.25" class="lyref">19.25</a> <span class="lyq">子为恭也。</span>《管子·枢言》：<span class="lyq">为善者，非善也。</span></span></span><span class="lyseealso"><span>【参】</span><span>“人为”即“伪”。“亡而为有”等的反面，可对比 <a href="#8.5" class="lyref">8.5</a> 。</span></span></p></li>
 <li><p><span class="lyterm">盈</span>：满，充满。<span class="lyexample"><span>【例】</span><span>《老子》第45章：<span class="lyq">大盈若冲，其用不穷。</span>（冲：空。）</span></span></p></li>
 <li><p><span class="lyterm"><a href="#tai4a">泰</a></span>：宽裕，奢侈。<span class="lyexample"><span>【例】</span><span>《管子·重令》：<span class="lyq">国虽富，不侈泰，不纵欲。</span></span></span></p></li>
 </ul></div>
@@ -3916,7 +3920,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">毋吾以也</span>：不要因为我（而不畅所欲言）呀。<span class="lyterm">以</span>：“以为念”的略语，即顾虑。具体的原因在前面说了：<span class="lyterm">吾一日长（<span class="lypinyin">zhǎng</span>）乎尔</span>。<span class="lyterm">一日</span>表示时间短，是轻松诙谐的说法。从4位弟子的排列顺序推测，曾皙比子路年纪小，比冉有年纪大。</p></li>
 <li><p><span class="lyterm">居则曰‘不吾知也’</span>：（你们）平时动不动就说“没人赏识我啊”。<a id="ju1"></a><span class="lyterm"><a href="#ju1a">居</a></span>：指平日里，闲暇时。<span class="lyterm">则</span>：表示动作的承接关系。</p></li>
-<li><p><span class="lyterm">何以</span>：怎样，指做什么，如何表现。</p></li>
+<li><p><span class="lyterm"><a href="#heyi">何以</a></span>：怎样，指做什么，如何表现。</p></li>
 <li><p><span class="lyterm">率</span>：可理解为直率、不假思索，也可理解为率先、抢着，都符合子路的性格。<span class="lyterm">率尔</span>就好像现代口语“着急忙慌”的感觉。这几位弟子中子路最年长，先回答也是应该的。</p></li>
 <li><p><span class="lyterm"><a href="#she4">摄</a></span>：夹持，挟制，两头受气。这可以从其本义“持”理解，也可以借助“镊”理解。</p></li>
 <li><p><span class="lyterm">师旅</span>：泛指军队，武力。<a href="#sanjun">周制</a> 500人为<span class="lyterm">旅</span>，2500人为<span class="lyterm">师</span>。</p></li>
@@ -4040,6 +4044,7 @@ img.characterimg {
 </div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">棘子成</span>：卫国大夫。后面的<span class="lyterm">夫子</span>指的也是他。</p></li>
+<li><p><span class="lyterm"><a href="#heyi">何以</a></span>：为什么，why。这个含义也经常用在反问句中表示否定。<span class="lyexample"><span>【例】</span><span><a href="#16.1" class="lyref">16.1</a> <span class="lyq">何以伐为？</span></span></span></p></li>
 <li><p><span class="lyterm">驷（<span class="lypinyin">sì</span>）不及舌</span>：指话一说出口，就算快马也追不回来了。<a id="si4"></a>春秋时每<a href="#sheng4a">乘</a>车套4匹马来拉，称为<span class="lyterm">驷</span>。后有成语“一言既出，驷马难追”。<span class="lyseealso"><span>【参】</span><span><a href="#11.6" class="lyref">11.6</a> </span></span></p></li>
 <li><p><a id="you2"></a><span class="lyterm">犹</span>：如，同，指同等重要。<span class="lyexample"><span>【例】</span><span><a href="#20.2" class="lyref">20.2</a> <span class="lyq">犹之与人也，出纳之吝，谓之有司。</span>《资治通鉴·后周太祖三年》（953年）：<span class="lyq">利在于民，犹在国也。</span></span></span><span class="lyseealso"><span>【参】</span><span><a href="#6.18" class="lyref">6.18</a> <a href="#15.18" class="lyref">15.18</a> </span></span></p></li>
 <li><p><span class="lyterm">鞟</span>（<span class="lypinyin">kuò</span>）：<a href="#ge2">革</a>，加工去毛的兽皮，这里比喻缺少了文的光秃秃的质。</p></li>
@@ -5900,9 +5905,10 @@ img.characterimg {
 <li><p><span class="lyterm">津</span>：渡口。后面的<span class="lyterm">知津</span>一语双关，暗指以孔子之智，应该清楚在当时仁礼之道并不可行，只是他不肯接受而已。后来“问津”引申为寻访，探求，熟语“指点迷津”表示为人指明正确可行的方向、途径。</p></li>
 <li><p><span class="lyterm">执<a href="#yu2b">舆</a></span>：相当于掌车，即手挽驾马的缰绳。本来是子路驾车，他下车问路，孔子就替他牵着。</p></li>
 <li>
-<p><span class="lyterm">滔滔者天下皆是也，而谁以易之？</span>：天下到处都是一样（的礼崩乐坏），就像这水流无穷无尽势不可挡啊，却能倚仗谁来改变它呢？</p>
+<p><span class="lyterm">滔滔者天下皆是也，而谁以易之？</span>：天下到处都是一样（的礼崩乐坏），就像这流水无穷无尽势不可挡啊，却能和谁来改变它呢？</p>
 <p><a id="taotao"></a><span class="lyterm">滔滔</span>：大水奔流不息的样子。<span class="lyexample"><span>【例】</span><span>毛泽东《菩萨蛮·黄鹤楼》（1927年）：<span class="lyq">把酒酹滔滔，心潮逐浪高！</span>（酹（<span class="lypinyin">lèi</span>）：以酒浇地作为祭奠。）</span></span></p>
-<p><span class="lyterm">以</span>：一般认为通“与”，和，同。我觉得理解成用、凭借、依靠，感觉更自然，也更符合长沮、桀溺消极悲观的态度。孔子是积极的，所以后面他会用“与”。这个解释与各家不同。<span class="lyexample"><span>【例】</span><span>“以”之后跟人的例子，如 <a href="#13.30" class="lyref">13.30</a> <span class="lyq">以不教民战</span>，《史记·留侯列传》：<span class="lyq">陛下起布衣，以此属取天下。</span>（此属：这些人。）</span></span></p>
+<p><span class="lyterm">谁以</span>：“以谁”的倒装。<span class="lyterm">以</span>：一般认为通“与”，和，同，这跟末句“丘不与易也”对应。<span class="lyexample"><span>【例】</span><span>《诗经·召南·江有汜》：<span class="lyq">不我以，其后也悔。</span>（汜（<span class="lypinyin">sì</span>）：江河中分而复合的支流。）《仪礼·乡射礼》：<span class="lyq">主人以宾揖，先入。</span></span></span></p>
+<p>我觉得理解成用、凭借、依靠，较符合长沮、桀溺消极悲观的态度。孔子更愿意积极参与，所以后面他用“与”。这个解释与各家不同。<span class="lyexample"><span>【例】</span><span>“以”之后跟人的例子，如 <a href="#13.30" class="lyref">13.30</a> <span class="lyq">以不教民战</span>，《史记·留侯列传》：<span class="lyq">陛下起布衣，以此属取天下。</span>（此属：这些人。）</span></span></p>
 <p><a id="yi4e"></a><span class="lyterm">易</span>：改变，这里有拯救、挽回的意味。</p>
 </li>
 <li><p><span class="lyterm">且而</span>里的<span class="lyterm">而</span>，通“尔”，你。</p></li>
@@ -6190,9 +6196,13 @@ img.characterimg {
 <div class="lybloboriginaltext"><p><a href="#shusunwushu">叔孙武叔</a>毁仲尼。<a href="#zigong">子贡</a>曰：“无以为也！仲尼不可毁也。他人之贤者，丘陵也，犹可逾也；仲尼，日月也，无得而逾焉。人虽欲自绝，其何伤于日月乎？多见其不知量也。”</p></div>
 <div class="lyblobannotation">
 <ul class="lyblobitemize">
+<li>
+<p><span class="lyterm">无以为也！</span>：字面意思是，没法子做到啊！意即，这么做没有用啊！<span class="lyterm">无以</span>：无从，无法，<span class="lyterm"><a href="#heyi">以</a></span>表示凭借。</p>
+<p>古注有将“以”解作近指代词此、这样；这句话就变成“<a href="#nov">NOV</a>”的倒装结构：不要这样做。但作“此”讲的例证既少见又不够典型，说不定还是传抄中的误写。如果通过<a href="#heyi">何以</a>来理解无以，把这句话替换成“何以为（之）也？”，就容易看清了。</p>
+</li>
 <li><p><span class="lyterm">自绝</span>：自行断绝关系（于日月）。</p></li>
 <li><p><span class="lyterm">多</span>：表示后果的副词，适足以，仅仅，只，mainly，merely，only。<span class="lyexample"><span>【例】</span><span>《左传·襄公十四年》：<span class="lyq">吾令实过，悔之何及？多<a href="#wei4">遗</a>秦禽。</span>（禽：通“擒”。）</span></span></p></li>
-<li><p><span class="lyterm">量</span>（<span class="lypinyin">liàng</span>）：器量，指学问修养的深浅高低。<span class="lyterm">其不知量</span>相当于说不明白他自己几斤几两。</p></li>
+<li><p><span class="lyterm">量</span>（<span class="lypinyin">liàng</span>）：指能力范围，学识修养的深浅高低，capability。<span class="lyterm">其不知量</span>相当于说不明白他自己几斤几两。</p></li>
 </ul>
 <p><span class="lyseealso"><span>【参】</span><span>东汉译《四十二章经》第8章：<span class="lyq">佛言：恶人害贤者，犹仰天而唾，唾不至天，还从已堕；逆风扬尘，尘不至彼，还坌己身。贤不可毁，祸必灭己。</span>（坌（<span class="lypinyin">bèn</span>）：（尘污）溅及。）</span></span></p>
 </div>
