--- a/aboly.html
+++ b/aboly.html
@@ -8,6 +8,7 @@ permalink: /aboly
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>一瓶论语</title>
 <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <style type="text/css">
@@ -513,7 +514,7 @@ img.characterimg {
 </script>
 </head>
 <body>
-<div class="navbar navbar-default navbar-fixed-top lynavbar" role="navigation"><div class="container">
+<div class="navbar navbar-default navbar-fixed-top lynavbar" role="navigation"><div class="container-fluid">
 <div class="navbar-header pull-left"><ul class="nav pull-left">
 <li class="dropdown pull-left" title="目录">
 <a id="navoutline" href="#" data-toggle="dropdown" class="dropdown-toggle lynavbar-anchor"><span class="glyphicon glyphicon-list-alt"></span></a><ul id="outlinemenu" class="dropdown-menu lyscrollable-menu"></ul>
@@ -6218,7 +6219,7 @@ img.characterimg {
 <p><span class="lyterm">子<a href="#wei2">为</a>恭也</span>：您是故意客气的吧。</p>
 <p><span class="lyseealso"><span>【参】</span><span>《说苑·善说》：<span class="lyq">子贡见<a href="#taizaipi">太宰嚭</a>，太宰嚭问曰：“孔子何如？”对曰：“臣不足以知之。”太宰曰：“子不知，何以事之？”对曰：“惟不知，故事之。夫子其犹大山林也，百姓各足其材焉。”太宰嚭曰：“子增夫子乎？”对曰：“夫子不可增也。夫赐，其犹一累壤也；以一累壤增大山，不益其高，且为不智。”</span>（足其材：比喻饱取所需。增：夸大。累（<span class="lypinyin">lěi</span>）：堆集。累壤：小土堆。）</span></span></p>
 </li>
-<li><p><span class="lyterm">君子一言以为知</span>：大人物的一句话就能显出他的智慧。</p></li>
+<li><p><span class="lyterm">君子一言以为知</span>：大人物的一句话就能显出他的智慧。这里<span class="lyterm"><a href="#junzi">君子</a></span>是称呼地位高的人，不同于 <a href="#15.34" class="lyref">15.34</a> <span class="lyq">君子不可小知而可大受也</span>。</p></li>
 <li><p><span class="lyterm">得<a href="#bang1">邦</a><a href="#jia1">家</a><a href="#zhe3">者</a></span>：要是成为一国之君或者卿大夫的话。</p></li>
 <li><p><span class="lyterm">立之斯立，<a href="#dao3">道</a>之斯行，绥（<span class="lypinyin">suí</span>）之斯<a href="#lai2">来</a>，动之斯和</span>。<span class="lyterm">之</span>：均指百姓。<span class="lyterm">立之斯立</span>：夫子立民，民则立。<span class="lyterm"><a href="#sui2">绥</a></span>：安抚。<span class="lyexample"><span>【例】</span><span>“靖”本义为静立，用作动词，为止息平定。“绥靖”的本来含义，是上对下的安抚平定，既有笼络也不乏铁腕；近代以来，常偏指不负责任的姑息养奸，通过纵容退让以求取事态稳定。</span></span></p></li>
 </ul></div>
