--- a/ly.html
+++ b/ly.html
@@ -8,6 +8,7 @@ permalink: /ly
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>论语</title>
 <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <style type="text/css">
@@ -316,7 +317,7 @@ a:link {
 </script>
 </head>
 <body>
-<div class="navbar navbar-default navbar-fixed-top lynavbar" role="navigation"><div class="container">
+<div class="navbar navbar-default navbar-fixed-top lynavbar" role="navigation"><div class="container-fluid">
 <div class="navbar-header pull-left"><ul class="nav pull-left"><li class="dropdown pull-left" title="目录">
 <a id="navoutline" href="#" data-toggle="dropdown" class="dropdown-toggle lynavbar-anchor"><span class="glyphicon glyphicon-list-alt"></span></a><ul id="outlinemenu" class="dropdown-menu lyscrollable-menu"></ul>
 </li></ul></div>
