Regular update. Add ly-tts audio to homepage.

--- a/aboly.html
+++ b/aboly.html
@@ -810,7 +810,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#1.13">1.13</a></div>
 <div class="lybloboriginaltext"><p><a href="#youruo">有子</a>曰：“信近于义，言可复也。恭近于礼，远耻辱也。因不失其亲，亦可宗也。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><a id="yi4"></a><span class="lyterm">义</span>：宜，适当，又引申为正义，符合道德规范。<span class="lyexample"><span>【例】</span><span><a href="#7.16" class="lyref">7.16</a> <span class="lyq">不义而富且贵，于我如浮云。</span></span></span><span class="lyseealso"><span>【参】</span><span>《韩非子·解老》：<span class="lyq">义者，君臣上下之事，父子贵贱之差也，知交朋友之接也，亲疏内外之分也。……义者，谓其宜也，宜而为之。</span>《孟子·告子上》：<span class="lyq">仁，人心也；义，人路也。</span>也就是说，仁是“真正的人”的精神，义是“真正的人”的表现。</span></span></p></li>
+<li><p><a id="yi4"></a><span class="lyterm">义</span>：宜，适当，又引申为正义，符合道德规范。<span class="lyexample"><span>【例】</span><span><a href="#7.16" class="lyref">7.16</a> <span class="lyq">不义而富且贵，于我如浮云。</span></span></span><span class="lyseealso"><span>【参】</span><span>《韩非子·解老》：<span class="lyq">义者，君臣上下之事，父子贵贱之差也，知交朋友之接也，亲疏内外之分也。……义者，谓其宜也，宜而为之。</span>《孟子·告子上》：<span class="lyq">仁，人心也；义，人路也。</span>可以说，仁是“真正的人”的精神，义是“真正的人”的表现，也就是 <a href="#16.11" class="lyref">16.11</a> <span class="lyq">行义以达其道。</span></span></span></p></li>
 <li><p><span class="lyterm">言可复也</span>：说过的话能够兑现。<span class="lyterm">复</span>：抵偿，偿还，引申为履行，实践。</p></li>
 <li><p><span class="lyterm">因不失其亲，<a href="#yi4d">亦</a>可宗也</span>：较难确解。唐代张说《府君墓志》等古文中，把上半句引作<span class="lyq">姻不失亲</span>；南朝梁皇侃《论语义疏》里，下半句为<span class="lyq">亦可宗敬也</span>。据此理解，<span class="lyterm">因</span>通“姻”，如因缘亦通姻缘；<span class="lyterm">宗</span>为动词，尊崇，效法。这句话的意思就是，结婚成家以后，如果不疏远了本家亲戚，也是值得尊敬的榜样。如果把“亲”单纯地理解为<a href="#qinqin">父母</a>，就类似于现代说的不能“娶了媳妇忘了娘”。这后一个解释与各家不同。<span class="lyseealso"><span>【参】</span><span><a href="#18.10" class="lyref">18.10</a> </span></span></p></li>
 </ul></div>
@@ -2623,7 +2623,7 @@ img.characterimg {
 <div class="lyblobannotation">
 <ul class="lyblobitemize">
 <li><p><span class="lyterm">隐</span>：隐瞒，藏着不说。这可能是有学生以为孔子在学问上有藏私，类似的想法陈亢也问过伯鱼 <a href="#16.13" class="lyref">16.13</a> 。</p></li>
-<li><p><span class="lyterm">无行而不与<a href="#ersanzi">二三子</a>者</span>：没有做了什么事而不让你们大伙儿知道的。<span class="lyterm">与</span>：指与共知，即明示。</p></li>
+<li><p><span class="lyterm">无行而不与<a href="#ersanzi">二三子</a>者</span>：没有做了什么事而不让你们大家知道的。<span class="lyterm">与</span>：指与共知，即明示。</p></li>
 </ul>
 <p>隐而不言的质疑，可能与 <a href="#5.13" class="lyref">5.13</a> <span class="lyq">不可得而闻</span>有关。孔子用无行不与来回应，符合他身教重于言传的一贯主张。正如钱穆《论语新解》所说：<span class="lyq">本章孔子提醒学者勿尽在言语上求高远，当从行事上求真实。有真实，始有高远。而孔子之身与道合，行与学化。</span>从教师教书育人的角度看，无行不与要比知无不言言无不尽更难能可贵。</p>
 </div>
@@ -5770,7 +5770,7 @@ img.characterimg {
 <li><p><a id="zhi3"></a><span class="lyterm">旨</span>：美味。<span class="lyexample"><span>【例】</span><span>成语“甘旨肥浓”。</span></span></p></li>
 <li><p><span class="lyterm">天下之通丧</span>。从其它资料看，当时“三年之丧”可能近乎名存实亡了，宰予的提议大概和 <a href="#3.17" class="lyref">3.17</a> <span class="lyq">子贡欲去告朔之饩羊</span>原因相似，孔子却希望像<a href="#lugongbiansu">鲁公变俗</a>那样恢复这个传统。<span class="lyseealso"><span>【参】</span><span>《礼记·檀弓上》载，某位有丧在身的鲁国人，早上刚进行了第25个月的大祥之祭，晚上就唱起歌来，<span class="lyq">子路笑之。夫子曰：“由，尔<a href="#ze2a">责</a>于人，终无已夫？三年之丧，亦已久矣夫。”子路出，夫子曰：“又多乎哉？逾月则其善也。”</span>这里孔子既称赞此人难能可贵，又希望他善始善终。郑玄注：<span class="lyq">为时如此，人行三年丧者希，抑子路以善彼。</span>《孟子·滕文公上》载，前327年滕定公去世，太子派人向孟子请教丧礼事宜，孟子回答：<span class="lyq">诸侯之礼，……，吾尝闻之矣。三年之丧，……，自天子达于庶人，<a href="#sandai">三代</a>共之</span>，和孔子的说法相同。滕国将用三年之丧时，结果却是<span class="lyq">父兄百官皆不欲，曰：“吾宗国鲁先君莫之行，吾先君亦莫之行也，至于子之身而反之，不可。”</span></span></span></p></li>
 <li>
-<p><span class="lyterm">有三年之爱于其父母乎？</span>：对父母有三年的爱吗？意思是，应该用居丧三年的礼仪，来表达对父母的爱，就像三岁之前身在父母怀抱中，父母对自己的爱一样。这里把<span class="lyterm">于</span>理解为对，如果理解为从，意即：难道年幼时没有从父母那里得到三年不离于怀的爱护吗，也通。<span class="lyseealso"><span>【参】</span><span>《说苑·修文》：<span class="lyq">子生三年，然后免于父母之怀。故制丧三年，所以报父母之恩也。</span></span></span></p>
+<p><a id="sannianzhiai"></a><span class="lyterm">有三年之爱于其父母乎？</span>：对父母有三年的爱吗？意思是，应该用居丧三年的礼仪，来表达对父母的爱，就像三岁之前身在父母怀抱中，父母对自己的爱一样。这里把<span class="lyterm">于</span>理解为对，如果理解为从，意即：难道年幼时没有从父母那里得到三年不离于怀的爱护吗，也通。<span class="lyseealso"><span>【参】</span><span>《说苑·修文》：<span class="lyq">子生三年，然后免于父母之怀。故制丧三年，所以报父母之恩也。</span></span></span></p>
 <p>“有……于……”的结构，既可表示give sth to sb，impose sth on sb，例如 <a href="#16.1" class="lyref">16.1</a> <span class="lyq">季氏将有事于颛臾</span>；又可表示get sth from sb，例如 <a href="#14.36" class="lyref">14.36</a> <span class="lyq">夫子固有惑志于公伯寮</span>。无论如何，这句话的语气都很严厉。</p>
 </li>
 </ul></div>
@@ -5854,20 +5854,20 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><a id="shishi"></a><span class="lyterm">士师</span>：掌管禁令、狱讼之官，位阶为中大夫，是<a href="#sikou">司寇</a>的下属，详见《周礼·秋官司寇》。在《周礼》和内容更古的《尚书》中，刑狱之官也泛称为“士”。</p></li>
 <li>
-<p><a id="chu4"></a><span class="lyterm">黜</span>（<span class="lypinyin">chù</span>）：免职或降职，又引申为废除。<span class="lyexample"><span>【例】</span><span>《汉书·武帝纪》：<span class="lyq">孝武初立，卓然罢黜百家，表章《<a href="#liujing">六经</a>》。</span></span></span></p>
+<p><a id="chu4"></a><span class="lyterm">黜</span>（<span class="lypinyin">chù</span>）：免职或降职，又引申为废除。<span class="lyexample"><span>【例】</span><span>《汉书·武帝纪》：<span class="lyq">孝武初立，卓然罢黜百家，表章《<a href="#liujing">六经</a>》。</span>（表章：即“表彰”，宣扬，推崇。）</span></span></p>
 <a id="liuxiahuiqi"></a><div class="lyseealso">
 <p><span>【参】</span><span>柳下惠三黜的详情已无法确考。西汉刘向《列女传·贤明传·柳下惠妻》记录了他和妻子关于三黜的问答，以及谥号“惠”的来历，可以想见其为人。</span></p>
 <div class="lyquotepara">
 <p>柳下惠处鲁，三黜而不去，忧民救乱。</p>
-<p>妻曰：“无乃渎乎？君子有二耻：国无道而贵，耻也；国有道而贱，耻也。今当乱世，三黜而不去，亦近耻也？”</p>
+<p>妻曰：“无乃渎乎？君子有<a href="#8.13">二耻</a>：国无道而贵，耻也；国有道而贱，耻也。今当乱世，三黜而不去，亦近耻也？”</p>
 <p>柳下惠曰：“油油之民，将陷于害，吾能已乎？且彼为彼，我为我，彼虽裸裎，安能污我？”油油然与之处，仕于下位。</p>
-<p>柳下既死，门人将诔之。妻曰：“将诔夫子之德耶？则二三子不如妾知之也。”乃诔曰：“夫子之不<a href="#fa2">伐</a>兮，夫子之不竭兮，夫子之信诚而与人无害兮。屈柔从俗，不强<a href="#cha2">察</a>兮。蒙耻救民，德弥大兮。虽遇三黜，终不蔽兮。恺悌君子，永能厉兮。嗟乎惜哉，乃下世兮。<a href="#shu4a">庶几</a>遐年，今遂逝兮。呜呼哀哉，魂神泄兮。夫子之谥，宜为惠兮。”</p>
+<p>柳下既死，门人将诔之。妻曰：“将诔夫子之德耶？则<a href="#ersanzi">二三子</a>不如妾知之也。”乃诔曰：“夫子之不<a href="#fa2">伐</a>兮，夫子之不竭兮，夫子之信诚而与人无害兮。屈柔从俗，不强<a href="#cha2">察</a>兮。蒙耻救民，德弥大兮。虽遇三黜，终不蔽兮。恺悌君子，永能厉兮。嗟乎惜哉，乃下世兮。<a href="#shu4a">庶几</a>遐年，今遂逝兮。呜呼哀哉，魂神泄兮。夫子之谥，宜为惠兮。”</p>
 <p>门人从之以为诔，莫能窜一字。君子谓柳下惠妻能光其夫矣。</p>
 </div>
 <p>（渎：通“黩”，贪求。<a id="youyou"></a>油油：通“悠悠”，第一个指广大众多，与 <a href="#18.6" class="lyref">18.6</a>  的<a href="#taotao">滔滔</a>意蕴相近，第二个指心态安适。裸裎（<span class="lypinyin">chéng</span>）：裸体。<a id="lei3"></a>诔（<span class="lypinyin">lěi</span>）：累述死者功德、致哀并定谥号，通常为上对下；这里是家人、弟子之诔，为私谥。<a id="kaiti"></a>恺（<span class="lypinyin">kǎi</span>）悌：和乐平易。厉：通“励”。下世：去世。遐年：长寿。窜：改。）</p>
 </div>
 </li>
-<li><p><span class="lyterm">父母之邦</span>：祖国，故土。英语也说fatherland、motherland，与此相通。</p></li>
+<li><p><span class="lyterm">父母之邦</span>：祖国，故土。英语也说motherland、fatherland、homeland、old country，与此相通。字面上看，“父母之邦”与“祖国”构词方式相同，为父母、祖辈所居之国；实际常偏指自己从小生长于斯，既受养育之恩、又在文化上熏陶认同，就像幼子依恋父母<a href="#sannianzhiai">不离于怀</a>的慈爱那样，包含着难以割舍的浓厚感情。对父母的<a href="#xiao4">孝</a>，潜移默化为对祖国的<a href="#zhong1">忠</a>，“何必去父母之邦”的感慨，也可以理解为 <a href="#4.19" class="lyref">4.19</a> <span class="lyq">父母在，不远游</span>的另一种表现。</p></li>
 </ul></div>
 </div>
 <a id="18.3"></a><div class="lyblob">
@@ -6035,7 +6035,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#19.4">19.4</a></div>
 <div class="lybloboriginaltext"><p><a href="#zixia">子夏</a>曰：“虽小道，必有可观者焉；致远恐泥，是以君子不为也。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p> 礼乐政教属于“大道”，<span class="lyterm">小道</span>就相当于杂学。<span class="lyseealso"><span>【参】</span><span><a href="#2.16" class="lyref">2.16</a> 。《汉书·艺文志》认为这句话是孔子说的，并引用它来评价小说家：<span class="lyq">小说家者流，盖出于稗官。街谈巷语，道听途说者之所造也。孔子曰：“……”然亦弗灭也。<a href="#lv2">闾</a>里小知者所及，亦使缀而不忘。如<a href="#huo4">或</a>一言可采，此亦刍荛狂夫之议也。</span>（稗（<span class="lypinyin">bài</span>）：细米。稗官：小官。缀：著录。<a id="churao"></a><a href="#chu2">刍</a>荛（<span class="lypinyin">ráo</span>）：割草打柴（之人），引申为乡野浅陋之人。）</span></span></p></li>
+<li><p> 礼乐政教属于“大道”，<span class="lyterm">小道</span>就相当于杂学。<span class="lyseealso"><span>【参】</span><span><a href="#2.16" class="lyref">2.16</a> 。《汉书·艺文志》认为这句话是孔子说的，并引用它来评价当时的小说家：<span class="lyq">小说家者流，盖出于稗官。街谈巷语，道听途说者之所造也。孔子曰：“……”然亦弗灭也。<a href="#lv2">闾</a>里小知者所及，亦使缀而不忘。如<a href="#huo4">或</a>一言可采，此亦刍荛狂夫之议也。</span>（稗（<span class="lypinyin">bài</span>）：细米。稗官：小官。缀：著录。<a id="churao"></a><a href="#chu2">刍</a>荛（<span class="lypinyin">ráo</span>）：割草打柴（之人），引申为乡野浅陋者。）</span></span></p></li>
 <li><p><span class="lyterm">致远恐泥</span>（<span class="lypinyin">nì</span>）：要达到高远的目标，担心会沉迷其中有所牵累。这说的是小道分散精力。也有解释为要凭借它达到很高的境界，恐怕是滞碍难行，说的是小道自身的局限性，亦通。<a id="zhi4b"></a><span class="lyterm">致</span>：到达，达到，获得。<span class="lyterm">泥</span>：阻滞，羁绊。</p></li>
 </ul></div>
 <div class="lyblobremark"><p>小说在中国古代并不很受重视，晚清受西方影响，地位才逐渐上升。后来似乎又矫枉过正，“古典小说四大名著”常被简称为“四大名著”，好像古典著作全都以此为尊，反而把传统上视为学术正宗的经史忽视了。</p></div>
