--- a/aboly.html
+++ b/aboly.html
@@ -5867,7 +5867,7 @@ img.characterimg {
 <p>（渎：通“黩”，贪求。<a id="youyou"></a>油油：通“悠悠”，第一个指广大众多，与 <a href="#18.6" class="lyref">18.6</a>  的<a href="#taotao">滔滔</a>意蕴相近，第二个指心态安适。裸裎（<span class="lypinyin">chéng</span>）：裸体。<a id="lei3"></a>诔（<span class="lypinyin">lěi</span>）：累述死者功德、致哀并定谥号，通常为上对下；这里是家人、弟子之诔，为私谥。<a id="kaiti"></a>恺（<span class="lypinyin">kǎi</span>）悌：和乐平易。厉：通“励”。下世：去世。遐年：长寿。窜：改。）</p>
 </div>
 </li>
-<li><p><span class="lyterm">父母之邦</span>：祖国，故土。英语也说motherland、fatherland、homeland、old country，与此相通。字面上看，“父母之邦”与“祖国”构词方式相同，为父母、祖辈所居之国；实际常偏指自己从小生长于斯，既受养育之恩、又在文化上熏陶认同，就像幼子依恋父母<a href="#sannianzhiai">不离于怀</a>的慈爱那样，包含着难以割舍的浓厚感情。对父母的<a href="#xiao4">孝</a>，潜移默化为对祖国的<a href="#zhong1">忠</a>，“何必去父母之邦”的感慨，也可以理解为 <a href="#4.19" class="lyref">4.19</a> <span class="lyq">父母在，不远游</span>的另一种表现。</p></li>
+<li><p><span class="lyterm">父母之邦</span>：祖国，故土。英语也说motherland、fatherland、homeland、old country，与此相通。“父母之邦”与“祖国”构词方式相同，字面上是父母、祖辈所居之国；实际的着重点常为，这是自己生长于斯的家园，既受养育之恩、又在文化上熏陶认同，就像幼子依恋父母<a href="#sannianzhiai">不离于怀</a>的慈爱，包含着难以割舍的感情。对父母的<a href="#xiao4">孝</a>，潜移默化为对祖国的<a href="#zhong1">忠</a>，“何必去父母之邦”的感慨，也可以理解为 <a href="#4.19" class="lyref">4.19</a> <span class="lyq">父母在，不远游</span>的另一种表现。</p></li>
 </ul></div>
 </div>
 <a id="18.3"></a><div class="lyblob">
