--- a/aboly.html
+++ b/aboly.html
@@ -853,7 +853,7 @@ img.characterimg {
 <p>原本所有的诗都配乐可歌，可惜乐谱久已失传。《诗经》从汉代起被奉为儒家经典。</p>
 <p>《诗经》是陆续辑成的，大部分诗篇采自<a href="#zhongyuan">中原</a>地区，孔子也参与了编选修订。《史记·孔子世家》称：<span class="lyq">古者《诗》三千余篇，及至孔子，去其重，取可施于礼义，……三百五篇孔子皆弦歌之，以求合《<a href="#shaoyue">韶</a>》、《<a href="#wuyue">武</a>》、《雅》、《颂》之音。<a href="#liyue">礼乐</a>自此可得而述，以备<a href="#wangdao">王道</a>，成<a href="#liujing">六艺</a>。</span>程度上或有夸大，但参考 <a href="#9.15" class="lyref">9.15</a> ，仍可想见孔子对于《诗经》思想规范化的重要影响。</p>
 </li>
-<li><p><span class="lyterm">云</span>：说，称。云略偏重于传达内容，<a href="#zi3">曰</a>略偏重于动作的进行。成语“子曰诗云”泛指儒家典籍，常用来调侃人只会引经据典却不通实务。</p></li>
+<li><p><a id="yun2"></a><span class="lyterm">云</span>：说，称。云略偏重于传达内容，<a href="#zi3">曰</a>略偏重于动作的进行。成语“子曰诗云”泛指儒家典籍，常用来调侃人只会引经据典却不通实务。</p></li>
 <li>
 <p><span class="lyterm">如切如磋，如琢如磨</span>：出自《诗经·卫风》第一首《淇奥》，原诗是形容君子勤于修养学问品德，就像工匠精心打磨象牙、雕琢美玉。子贡引用它想表达的意思是，人有了好的条件，还要注重修养磨练才能成器。<span class="lyseealso"><span>【参】</span><span>《诗经》毛亨传：<span class="lyq">治骨曰切，象曰磋，玉曰琢，石曰磨。</span>《礼记·学记》：<span class="lyq">玉不琢，不成<a href="#qi4">器</a>；人不学，不知道。是故古之王者建国君民，教学为先。</span></span></span></p>
 <p><a id="huoyongjingdian"></a>从经典中抽取只言片语来表达自己的观点，是当时的惯常做法。有时想表达的意思故意偏离或超出了原意，就要只看字面含义，从引用者的上下文重新理解。后文还有引用《诗经》之处，可以留意这个特点。元代钱惟善《韩诗外传序》评价：<span class="lyq">《外传》虽非解经之详，断章取义，要有合于孔门<a href="#zixia">商</a>、<a href="#zigong">赐</a>言诗之旨</span>（<a id="yao4"></a>要：总，总之），说的就是本章与 <a href="#3.8" class="lyref">3.8</a> ，这种方式被视为<span class="lyq">阐<a href="#weiyandayi">微</a>而彰显</span>的学术成就（明代杨祜（<span class="lypinyin">hù</span>）《韩诗外传》序）。<a href="#liujing">六经</a>成为正统后，古代学者的主要职责之一就是注疏经典，根据静态的文本阐述古代圣贤之意，发掘适合时用的修身治世准则，由此形成了传统儒家学术的主体——经学。</p>
@@ -1340,7 +1340,7 @@ img.characterimg {
 <li><p><a id="zhouyouwang"></a>宣王之子<span class="lykeyword">幽王</span>继位后，宠信美女佞臣，废黜王后太子，烽火戏诸侯。王后之父申侯借兵<a href="#yidihuaxia">犬戎</a>一举攻下镐京，幽王被犬戎杀害，镐京也遭到劫掠。北方游牧民族对中原的侵扰自此而始，直到1697年康熙平灭噶尔丹才告平息。</p></li>
 <li>
 <p> 旧太子继位为<span class="lykeyword">平王</span>，迁都<a href="#luoyi">洛邑</a>，镐京一带于是被犬戎窃据。周王室丧失诸侯信任，放弃关中地利，国势顿衰，天下逐渐走向分裂。</p>
-<p><a id="wenhuaxiayi"></a>礼乐典籍的散失、公职学者的外流，也使高等教育从周室贵族垄断的<span class="lykeyword">官学</span>传入各诸侯国，逐渐产生了<a href="#7.7">门槛较低</a>的大众<span class="lykeyword">私学</span>。<a id="tianzishiguan"></a>前525年（《左传·昭公十七年》），27岁的孔子向访鲁的郯国国君问学后感叹：<span class="lyq">“吾闻之：天子失官，学在<a href="#yidihuaxia">四夷</a>，犹信。”</span>（郯（<span class="lypinyin">tán</span>）国：己姓小国，都城在今山东省临沂市郯城县北。<a id="shiguan"></a>失官：亡失传统的典籍制度。这里“官”的含义与《周礼》的原名《周官》中相同。失官又指失职。）<a href="#18.9" class="lyref">18.9</a>  则是文化再由诸侯国散入民间的写照。</p>
+<p><a id="wenhuaxiayi"></a>礼乐典籍的散失、公职学者的外流，也使高等教育从周室贵族垄断的<span class="lykeyword">官学</span>传入各诸侯国，逐渐产生了<a href="#7.7">门槛较低</a>的大众<span class="lykeyword">私学</span>。<a id="tianzishiguan"></a>前525年（《左传·昭公十七年》），27岁的孔子向访鲁的郯国国君问学后感叹：<span class="lyq">“吾闻之：天子失官，学在<a href="#yidihuaxia">四夷</a>，犹信。”</span>（郯（<span class="lypinyin">tán</span>）国：己姓小国，爵位为<a href="#juewei">子</a>，都城在今山东省临沂市郯城县北。<a id="shiguan"></a>失官：亡失传统的典籍制度。这里“官”的含义与《周礼》的原名《周官》中相同。失官又指失职。）<a href="#18.9" class="lyref">18.9</a>  则是文化再由诸侯国散入民间的写照。</p>
 </li>
 <li><p><a id="qinbo"></a>《史记·秦本纪》载，平王册封救护有功的秦襄公为<a href="#juewei">伯爵</a>，并立誓：<span class="lyq">戎无道，侵夺我<a href="#taibo">岐</a><a href="#fengyi">丰</a>之地，秦能攻逐戎，即有其地。</span>秦国经过20余年伐戎成功，<span class="lyq">遂收周余民有之，地至岐，岐以东献之周</span>，奠定了争雄天下的基础。</p></li>
 </ol>
@@ -5854,9 +5854,9 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><a id="shishi"></a><span class="lyterm">士师</span>：掌管禁令、狱讼之官，位阶为中大夫，是<a href="#sikou">司寇</a>的下属，详见《周礼·秋官司寇》。在《周礼》和内容更古的《尚书》中，刑狱之官也泛称为“士”。</p></li>
 <li>
-<p><a id="chu4"></a><span class="lyterm">黜</span>（<span class="lypinyin">chù</span>）：免职或降职，又引申为废除。<span class="lyexample"><span>【例】</span><span>《汉书·武帝纪》：<span class="lyq">孝武初立，卓然罢黜百家，表章《<a href="#liujing">六经</a>》。</span>（表章：即“表彰”，宣扬，推崇。）</span></span></p>
+<p><a id="chu4"></a><span class="lyterm">黜</span>（<span class="lypinyin">chù</span>）：免职或降职，又引申为废除。<span class="lyexample"><span>【例】</span><span>《汉书·武帝纪》：<span class="lyq">孝武初立，卓然罢黜百家，表章<a href="#liujing">六经</a>。</span>（表章：即“表彰”，宣扬，推崇。）</span></span></p>
 <a id="liuxiahuiqi"></a><div class="lyseealso">
-<p><span>【参】</span><span>柳下惠三黜的详情已无法确考。西汉刘向《列女传·贤明传·柳下惠妻》记录了他和妻子关于三黜的问答，以及谥号“惠”的来历，可以想见其为人。</span></p>
+<p><span>【参】</span><span>柳下惠三黜的详情已无法确考。西汉刘向《列女传·贤明传·柳下惠妻》记录了他跟妻子关于三黜的问答，以及谥号“惠”的来历，可以想见其为人。</span></p>
 <div class="lyquotepara">
 <p>柳下惠处鲁，三黜而不去，忧民救乱。</p>
 <p>妻曰：“无乃渎乎？君子有<a href="#8.13">二耻</a>：国无道而贵，耻也；国有道而贱，耻也。今当乱世，三黜而不去，亦近耻也？”</p>
@@ -5867,7 +5867,7 @@ img.characterimg {
 <p>（渎：通“黩”，贪求。<a id="youyou"></a>油油：通“悠悠”，第一个指广大众多，与 <a href="#18.6" class="lyref">18.6</a>  的<a href="#taotao">滔滔</a>意蕴相近，第二个指心态安适。裸裎（<span class="lypinyin">chéng</span>）：裸体。<a id="lei3"></a>诔（<span class="lypinyin">lěi</span>）：累述死者功德、致哀并定谥号，通常为上对下；这里是家人、弟子之诔，为私谥。<a id="kaiti"></a>恺（<span class="lypinyin">kǎi</span>）悌：和乐平易。厉：通“励”。下世：去世。遐年：长寿。窜：改。）</p>
 </div>
 </li>
-<li><p><span class="lyterm">父母之邦</span>：祖国，故土。英语也说motherland、fatherland、homeland、old country，与此相通。“父母之邦”与“祖国”构词方式相同，字面上是父母、祖辈所居之国；实际的着重点常为，这是自己生长于斯的家园，既受养育之恩、又在文化上熏陶认同，就像幼子依恋父母<a href="#sannianzhiai">不离于怀</a>的慈爱，包含着难以割舍的感情。对父母的<a href="#xiao4">孝</a>，潜移默化为对祖国的<a href="#zhong1">忠</a>，“何必去父母之邦”的感慨，也可以理解为 <a href="#4.19" class="lyref">4.19</a> <span class="lyq">父母在，不远游</span>的另一种表现。</p></li>
+<li><p><span class="lyterm">父母之邦</span>：祖国，故土。英语也说motherland、fatherland、homeland、old country，与此相通。“父母之邦”和“祖国”构词方式相同，字面上是父母、祖辈所居之国；实际的着重点常在于，这是自己生长于斯的家园，既受养育之恩、又在文化上熏陶认同，就像幼子依恋父母<a href="#sannianzhiai">不离于怀</a>的慈爱，包含着难以割舍的感情。对父母的<a href="#xiao4">孝</a>，潜移默化为对祖国的<a href="#zhong1">忠</a>，“何必去父母之邦”的感慨，也可以理解为 <a href="#4.19" class="lyref">4.19</a> <span class="lyq">父母在，不远游</span>的另一种表现。</p></li>
 </ul></div>
 </div>
 <a id="18.3"></a><div class="lyblob">
@@ -5875,14 +5875,14 @@ img.characterimg {
 <div class="lybloboriginaltext"><p><a href="#qijinggong">齐景公</a>待孔子曰：“若<a href="#jishi">季氏</a>，则吾不能。”以<a href="#jishi">季</a>、<a href="#mengshi">孟</a>之间待之。曰：“吾老矣，不能用也。”孔子行。</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p> 前面的<span class="lyterm">待孔子曰</span>，也许是和大臣们商议给孔子的待遇。后面的<span class="lyterm">曰</span>，也许是过了一段时间之后，重新自我认识的话。</p></li>
-<li><p><span class="lyterm">若季氏，则吾不能</span>：指齐景公无法以鲁君对季氏的同等规格来任用孔子。<span class="lyterm">季、孟之间</span>是介于季氏和孟氏的待遇，虽非专听专信，仍然很隆重。可后来有齐国大夫忌害孔子，孔子告诉景公，景公爱莫能助，可能也自愧无法达到孔子的期望，才会发出<span class="lyterm">吾老矣，不能用也</span>的慨叹，事见《史记·孔子世家》。<span class="lyseealso"><span>【参】</span><span>清代崔述认为：<span class="lyq">景公是时年仅四五十岁，其后复在位二十余年，岁会诸侯，赏战士，与晋争霸，亦不当云“老不能用”也。</span>但景公既非励精图治之君，又无法预知后事，这应是一时一地的心境。</span></span>也有不同意《史记》的观点，认为后一句是孔子推辞的话。</p></li>
+<li><p><span class="lyterm">若季氏，则吾不能</span>：指齐景公无法以鲁君对季氏的同等规格来任用孔子。<span class="lyterm">季、孟之间</span>是介于季氏和孟氏的待遇，虽非专听专信，仍然很隆重。可后来有齐国大夫忌害孔子，孔子告知景公，景公爱莫能助，可能也自愧无法达到孔子的期望，才会发出<span class="lyterm">吾老矣，不能用也</span>的慨叹，事见《史记·孔子世家》。<span class="lyseealso"><span>【参】</span><span>清代崔述认为：<span class="lyq">景公是时年仅四五十岁，其后复在位二十余年，岁会诸侯，赏战士，与晋争霸，亦不当云“老不能用”也。</span>但景公既非励精图治之君，又无以预知后事，这应是一时一地的心境。</span></span>也有不同意《史记》的观点，认为后一句是孔子推辞的话。</p></li>
 </ul></div>
 </div>
 <a id="18.4"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#18.4">18.4</a></div>
 <div class="lybloboriginaltext"><p>齐人归女乐，季桓子受之，三日不朝。孔子行。</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><a id="qirenkuinvyue"></a><span class="lyterm">齐人归（<span class="lypinyin">kuì</span>）女乐</span>：指前498年（<a href="#dinggong">鲁定公</a>12年）冬，齐国为了惑乱鲁政而赠送定公女乐骏马一事。<span class="lyterm">归</span>：通“馈”。据《史记·孔子世家》，前501年，定公任用孔子为中都（在今山东省济宁市汶上县西，<a href="#wenshui">汶水</a>之南）宰，孔子当时已经51岁了。<a id="sikong"></a>后来升任司空（主管工程营建）、<a href="#sikou">司寇</a>，理政3月就使鲁国面貌一新。齐国认为孔子为政必使鲁国称雄，对接壤的齐国是重大威胁，应该遏止这个势头，<span class="lyq">于是选齐国中女子好者八十人，皆衣<a href="#wen2">文</a>衣而舞《康乐》，文马三十驷，遗鲁君，陈女乐文马于鲁城南高门外。</span>（好：美。<a id="wei4"></a>遗（<span class="lypinyin">wèi</span>）：赠送。）<a href="#jihuanzi">季桓子</a>先替定公去鉴赏了一番，又劝定公亲自观摩，最终收下了这些诱人的礼物。于是国政荒废，次年春的郊祭也敷衍了事，孔子无奈<a href="#13.9">去了卫国</a>。后来，<span class="lyq">桓子<a href="#kui4">喟</a>然叹曰：“夫子罪我以群婢故也夫！”</span>定公耽于女乐时还不知道，他的日子只剩下3年了。</p></li>
+<li><p><a id="qirenkuinvyue"></a><span class="lyterm">齐人归（<span class="lypinyin">kuì</span>）女乐</span>：指前498年（<a href="#dinggong">鲁定公</a>12年）冬，齐国为了惑乱鲁政而赠送定公女乐骏马一事。<span class="lyterm">归</span>：通“馈”。据《史记·孔子世家》，前501年，定公任用孔子为中都（在今山东省济宁市汶上县西，<a href="#wenshui">汶水</a>之南）宰，孔子当时已经51岁了。<a id="sikong"></a>后来升任司空（主管工程营建）、<a href="#sikou">司寇</a>，理政3月就使鲁国面貌一新。齐国认为孔子为政必使鲁国称雄，对接壤的齐国是重大威胁，应该遏止这个势头，<span class="lyq">于是选齐国中女子好者八十人，皆衣<a href="#wen2">文</a>衣而舞《康乐》，文马三十驷，遗鲁君，陈女乐文马于鲁城南高门外。</span>（好：美。<a id="wei4"></a>遗（<span class="lypinyin">wèi</span>）：赠送。）<a href="#jihuanzi">季桓子</a>先去替定公鉴赏了一番，又劝定公亲自观摩，最终收下了这些诱人的礼物。于是国政荒废，次年春的郊祭也敷衍了事，孔子无奈<a href="#13.9">去了卫国</a>。后来，<span class="lyq">桓子<a href="#kui4">喟</a>然叹曰：“夫子罪我以群婢故也夫！”</span>定公耽于女乐时可不知道，他的日子只剩下3年了。</p></li>
 <li><p><a id="jihuanzi"></a><span class="lyterm">季桓子</span>：季孙斯（？—前492年），<a href="#jishi">季孙氏</a>第5代宗主，谥号是桓（“壮以有力曰桓”），时任鲁国正卿。<a href="#jikangzi">季康子</a>是他的儿子，<a href="#yanghuo">阳货</a>曾任他的管家。</p></li>
 </ul></div>
 </div>
@@ -6192,8 +6192,8 @@ img.characterimg {
 <li><p><span class="lyterm">室家</span>：房舍，这属于普通人家的资产。</p></li>
 <li><p><a id="ren4"></a><span class="lyterm">仞</span>（<span class="lypinyin">rèn</span>）：长度单位，标准是成年人的臂展，合周制8 <a href="#chi3">尺</a> ≈ 汉制7尺 ≈ 1.6米。</p></li>
 <li><p><span class="lyterm"><a href="#zongmiao">宗庙</a>之美，百官之富</span>：宗庙的壮美，各种馆舍的齐备，这属于王侯之家的气象。<a id="guan1"></a><span class="lyterm">官</span>：官舍，官吏办公处，这是其本义。</p></li>
-<li><p><span class="lyterm">夫子之云</span>里的<span class="lyterm">夫子</span>，指叔孙武叔。<span class="lyterm">云</span>用作名词，说的话，意思是“会这样说”，近似于 <a href="#12.8" class="lyref">12.8</a> <span class="lyq">夫子之说君子也。</span></p></li>
-<li><p><span class="lyterm">宜</span>：合适，引申为当然，难怪，容易理解。<span class="lyexample"><span>【例】</span><span>苏舜钦《答马永书》：<span class="lyq">苟去其位，则道日益舒，宜其安而无闷也。</span></span></span></p></li>
+<li><p><span class="lyterm">夫子之云</span>里的<span class="lyterm">夫子</span>，指叔孙武叔。<span class="lyterm"><a href="#yun2">云</a></span>用作名词，说的话，意思是“会这样说”，近似于 <a href="#12.8" class="lyref">12.8</a> <span class="lyq">夫子之说君子也。</span></p></li>
+<li><p><span class="lyterm">宜</span>：合适，引申为当然，难怪，容易理解。<span class="lyexample"><span>【例】</span><span>北宋苏舜钦《答马永书》：<span class="lyq">苟去其位，则道日益舒，宜其安而无闷也。</span></span></span></p></li>
 </ul></div>
 </div>
 <a id="19.24"></a><div class="lyblob">
@@ -6367,8 +6367,8 @@ img.characterimg {
 <p><a id="menggongchuo"></a><span class="lycharname">孟公绰</span>，<span class="lycharname">公绰</span>：与孔子同时代的鲁国大夫，<a href="#mengshi">孟氏</a>族人，为人廉静寡欲。《左传·襄公二十五年》（前517年）载，当年春，<a href="#cuizhu">崔杼</a>率齐军侵入鲁国北疆，襄公向晋国求救。孟公绰发现齐军不像往常那样大肆劫掠，穷尽民力，认为崔杼别有所图：<span class="lyq">崔子将有大志，不在<a href="#bing4">病</a>我，必速归，何患焉？</span>果然齐军虚张声势了一阵就回去了，同年5月，齐庄公被弑。 <a href="#14.11" class="lyref">14.11</a> <a href="#14.12" class="lyref">14.12</a> </p>
 <p><a id="mengshi"></a><span class="lycharname">孟氏</span>，<span class="lycharname">孟</span>：即孟孙氏，鲁国<a href="#sanhuan">三桓</a>之一，是鲁桓公庶长子庆父的后代，已知的最后一代宗主是第11代的<a href="#mengjingzi">孟敬子</a>。据说孟子也是庆父的后代，但和孟孙氏不同<a href="#zongzhu">族</a>。 <a href="#18.3" class="lyref">18.3</a> <a href="#19.19" class="lyref">19.19</a> </p>
 <p><a id="mengwubo"></a><span class="lycharname">孟武伯</span>：名彘（<span class="lypinyin">zhì</span>），谥号是武，<a href="#mengyizi">孟懿子</a>长子，<a href="#mengshi">孟孙氏</a>第10代宗主。<a href="#aigong">鲁哀公</a>在位的最后一年（前468年），出游时遇见孟武伯，哀公<span class="lyq">曰：“请有问于子：余及死乎？”对曰：“臣无由知之。”三问，卒辞不对。</span>（及死：善终，寿终。）哀公被迫要对<a href="#sanhuan">三桓</a>动手了。事见《左传·哀公二十七年》。 <a href="#2.6" class="lyref">2.6</a> <a href="#5.8" class="lyref">5.8</a> </p>
-<p><a id="qihuangong"></a><span class="lycharname">齐桓公</span>，<span class="lycharname">桓公</span>（？—前643年）：名小白，齐僖公三子，齐国第15任国君，春秋五<a href="#badao">霸</a>之首（“辟土服远曰桓”）。在位43年，信任<a href="#guanzhong">管仲</a>主政，力行改革，国力大盛，尊王攘<a href="#yidihuaxia">夷</a>，<a href="#jiuhezhuhou">九合诸侯</a>，成为“霸主”的典范。事见《史记·齐太公世家》。 <a href="#14.15" class="lyref">14.15</a> <a href="#14.16" class="lyref">14.16</a> <a href="#14.17" class="lyref">14.17</a> </p>
-<p><a id="qijinggong"></a><span class="lycharname">齐景公</span>（前547年—前490年在位）：名杵臼，齐国第23任国君，<a href="#cuizhu">齐庄公</a>的异母弟，在位之久为齐国之最。他<span class="lyq">好治宫室，聚狗马，奢侈，厚赋重刑</span>，幸好内有贤相<a href="#yanpingzhong">晏婴</a>，外有良将司马穰苴（<span class="lypinyin">ráng jū</span>），任内局势基本稳定。但早在景公九年，晏婴就察觉到衰败的端倪，认为<span class="lyq">齐政卒归<a href="#chenchengzi">田氏</a>：田氏虽无大德，以公权私，有德于民，民爱之。</span>事见《史记·齐太公世家》。《晏子春秋》记载了大量“景公如何如何，晏子谏/对/讽”的故事。 <a href="#12.11" class="lyref">12.11</a> <a href="#16.12" class="lyref">16.12</a> <a href="#18.3" class="lyref">18.3</a> </p>
+<p><a id="qihuangong"></a><span class="lycharname">齐桓公</span>，<span class="lycharname">桓公</span>（？—前643年）：名小白，齐僖公三子，齐国第15任国君，春秋五<a href="#badao">霸</a>之首（“辟土服远曰桓”）。他在位43年，信任<a href="#guanzhong">管仲</a>主政，力行改革，国力大盛，尊王攘<a href="#yidihuaxia">夷</a>，<a href="#jiuhezhuhou">九合诸侯</a>，成为“霸主”的典范。事见《史记·齐太公世家》。 <a href="#14.15" class="lyref">14.15</a> <a href="#14.16" class="lyref">14.16</a> <a href="#14.17" class="lyref">14.17</a> </p>
+<p><a id="qijinggong"></a><span class="lycharname">齐景公</span>（前547年—前490年在位）：名杵臼，齐国第23任国君，<a href="#cuizhu">齐庄公</a>的异母弟，在位之久为齐国之最。他<span class="lyq">好治宫室，聚狗马，奢侈，厚赋重刑</span>，幸好内有贤相<a href="#yanpingzhong">晏婴</a>，外有良将司马穰苴（<span class="lypinyin">ráng jū</span>），任内局势基本稳定。但早在景公九年，晏婴就察觉到衰败的端倪，认为<span class="lyq">齐政卒归<a href="#chenchengzi">田氏</a>：田氏虽无大德，以公权私，有德于民，民爱之。</span>事见《史记·齐太公世家》。《晏子春秋》记载了大量“景公如何如何，晏子谏/讽/对”的故事。 <a href="#12.11" class="lyref">12.11</a> <a href="#16.12" class="lyref">16.12</a> <a href="#18.3" class="lyref">18.3</a> </p>
 <p><a id="quboyu"></a><span class="lycharname">蘧（<span class="lypinyin">qú</span>）伯玉</span>：蘧瑗（<span class="lypinyin">yuàn</span>），字伯玉，卫国贤大夫，谥号是成（“安民立政曰成”）。他应比孔子年长10岁以上，孔子在卫国时，曾借住在他家。西汉刘安《淮南子·原道训》说：<span class="lyq">蘧伯玉年五十而有四十九年非。何者？先者难为知，而后者易为攻也。</span>（攻：指借鉴经验以克服困难，相当于现代说的后发优势。）可见他是个不断追求进步的人。据《孔子家语·弟子行》，孔子评价他<span class="lyq">外宽而内正，自极于隐括之中，直己而不直人，汲汲于仁，以善自终。</span>（隐括：矫正曲斜的工具，隐是矫曲为直，括是矫斜为方，引申为标准规范，构词与<a href="#leixie">缧绁</a>相同。汲汲：急切追求的样子。） <a href="#14.25" class="lyref">14.25</a> <a href="#15.7" class="lyref">15.7</a> </p>
 <p><a id="shusunwushu"></a><span class="lycharname">叔孙武叔</span>：鲁国<a href="#sanhuan">三桓</a>之一叔孙氏的第8代宗主，名州仇，谥号是武，曾任鲁国<a href="#huantui">司马</a>。叔孙氏的封邑是郈（<span class="lypinyin">hòu</span>）邑，在今山东省泰安市东平县，位于<a href="#wenshui">汶水</a>北岸，齐鲁交界处。 <a href="#19.23" class="lyref">19.23</a> <a href="#19.24" class="lyref">19.24</a> </p>
 <p><a id="shun"></a><span class="lycharname">舜</span>（约前2200年前后）：有虞氏，名重华，又称虞舜，上古传说中<a href="#wudi">五帝</a>的第5位，是五帝第2位颛顼的6世孙。他20岁即以孝谨闻名（成为《二十四孝》第1个故事“孝感动天”的主角），30岁被举荐给<a href="#yao">尧帝</a>。尧帝把两个女儿娥皇、女英嫁给他，让9个儿子同他共事。经过长期的考察锻炼，舜在50岁时摄天子政，61岁登帝位，22年后退居二线，授权给治水有功的<a href="#yu">禹</a>，又17年后去世。舜帝<a href="#wuweierzhi">举贤任能</a>，布教四方，厚德远佞，建立了井井有条的清平世界。 <a href="#6.30" class="lyref">6.30</a> <a href="#8.18" class="lyref">8.18</a> <a href="#8.20" class="lyref">8.20</a> <a href="#12.22" class="lyref">12.22</a> <a href="#14.42" class="lyref">14.42</a> <a href="#15.5" class="lyref">15.5</a> <a href="#20.1" class="lyref">20.1</a> </p>
